--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">CineNova</string>
     <string name="title">%s</string>
     <string name="rating"> %s / 10</string>
-    <string name="release_date">Release Date : %s</string>
+    <string name="release_date">Release Date</string>
     <string name="error">Page Not Found</string>
     <string name="now_playing">NOW PLAYING</string>
     <string name="time">%s - %s</string>
+    <string name="category">Movie</string>
+    <string name="overvier">Overview</string>
 </resources>
